--- a/projects/_posts/2021-03-10-AML.md
+++ b/projects/_posts/2021-03-10-AML.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "AML"
-docurl: static/projects/AML.pdf
+docurl: ({{shivyucel.github.io}}/static/projects/AML.pdf){:target="_blank"}
 category: "projects"
 
 ---
