--- a/projects/_posts/2021-03-10-AML.md
+++ b/projects/_posts/2021-03-10-AML.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "AML"
+title:  "Fragile Families Machine Learning Challenge (link to PDF)"
 docurl: static/AML.pdf
 category: "projects"
 
