--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -6,6 +6,5 @@ category: "projects"
 
 ---
 
-this the post excerpt
+Can machine learning be used to predict life outcomes? 
 
-this is the maybe useless post body
