upload commuting link

--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title:  "Fragile Families Machine Learning Challenge (link to PDF)"
+title:  "Can machine learning be used to predict life outcomes? (link to PDF)"
 docurl: static/AML.pdf
+
 category: "projects"
 
 ---
-
-Can machine learning be used to predict life outcomes? 
+Fragile Families Machine Learning Challenge --
+<a href="https://www.WordPress.com" target="_blank">code here</a>
 
