--- a/projects/_posts/2021-04-20-SAN.md
+++ b/projects/_posts/2021-04-20-SAN.md
@@ -5,5 +5,6 @@ docurl: static/SAN.pdf
 category: "projects"
 
 ---
+What influences commuting flow and which regions are most at risk of disease transmission? -- 
+<a href="https://github.com/shivyucel/Commuting_SP_Network_Analysis" target="_blank">code here</a>
 
-What influences commuting flow and which regions are most at risk of disease transmission?
