--- a/projects/_posts/2021-06-20-RD.md
+++ b/projects/_posts/2021-06-20-RD.md
@@ -5,4 +5,4 @@ docurl: static/RD_cellphone.pdf
 category: "projects"
 
 ---
-What new challenges are posed for researchers using this novel data source?
+What challenges are posed for researchers using this novel data source?
