--- a/projects/_posts/2021-04-20-SAN.md
+++ b/projects/_posts/2021-04-20-SAN.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Understanding São Paulo's Commuting Network (link to PDF)"
+title:  "Understanding São Paulo's commuting network (link to PDF)"
 docurl: static/SAN.pdf
 category: "projects"
 
