--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Can machine learning be used to predict life outcomes? (link to PDF)"
+title:  "Can machine learning be used to predict child life outcomes? (link to PDF)"
 docurl: static/AML.pdf
 
 category: "projects"
