--- a/projects/_posts/2021-06-20-RD.md
+++ b/projects/_posts/2021-06-20-RD.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "A Methodological Critique of COVID-19 Studies Based on Cell-Phone Mobility Data (link to PDF)"
+title:  "A methodological critique of COVID-19 studies based on cell-phone mobility data (link to PDF)"
 docurl: static/RD_cellphone.pdf
 category: "projects"
 
