--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -7,5 +7,5 @@ category: "projects"
 
 ---
 Fragile Families Machine Learning Challenge --
-<a href="https://www.WordPress.com" target="_blank">code here</a>
+<a href="https://github.com/shivyucel/Fragile_Families_ML_Challenge" target="_blank">code here</a>
 
