--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -6,6 +6,6 @@ docurl: static/AML.pdf
 category: "projects"
 
 ---
-Fragile Families Machine Learning Challenge --
-<a href="https://github.com/shivyucel/Fragile_Families_ML_Challenge" target="_blank">code here</a>
+Fragile Families Machine Learning Challenge -- <a href="https://github.com/shivyucel/Fragile_Families_ML_Challenge" target="_blank">code here</a> 
+
 
