--- a/projects/_posts/2021-04-20-SAN.md
+++ b/projects/_posts/2021-04-20-SAN.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title:  "Understanding São Paulo's commuting network (link to PDF)"
-docurl: static/SAN.pdf
+title:  "Understanding São Paulo's commuting network"
+#docurl: static/SAN.pdf
 category: "projects"
 
 ---
-What influences commuting flow and potential disease risk? -- 
-<a href="https://github.com/shivyucel/Commuting_SP_Network_Analysis" target="_blank">code here</a>
+What influences commuting flow and potential disease risk? 
+
+[PDF of project linked here.]({{shivyucel.github.io}}/projects/static/SAN.pdf){:target="_blank"}
+
+<a href="https://github.com/shivyucel/Commuting_SP_Network_Analysis" target="_blank">Code can be found here.</a>
 
