--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -1,11 +1,14 @@
 ---
 layout: post
-title:  "Can machine learning be used to predict child life outcomes? (link to PDF)"
-docurl: static/AML.pdf
+title:  "Can machine learning be used to predict child life outcomes?"
+#docurl: static/AML.pdf
 
 category: "projects"
 
 ---
-Fragile Families Machine Learning Challenge -- <a href="https://github.com/shivyucel/Fragile_Families_ML_Challenge" target="_blank">code here</a> 
+Fragile Families Machine Learning Challenge
 
+[PDF of project linked here.]({{shivyucel.github.io}}/projects/static/AML.pdf){:target="_blank"}
+
+<a href="https://github.com/shivyucel/Fragile_Families_ML_Challenge" target="_blank">Code can be found here.</a>
 
