--- a/projects/_posts/2021-06-20-RD.md
+++ b/projects/_posts/2021-06-20-RD.md
@@ -1,8 +1,12 @@
 ---
 layout: post
-title:  "A methodological critique of COVID-19 studies based on cell-phone mobility data (link to PDF)"
-docurl: static/RD_cellphone.pdf
+title:  "A methodological critique of COVID-19 studies based on cell-phone mobility data"
+#docurl: static/RD_cellphone.pdf
 category: "projects"
 
 ---
 What challenges are posed for researchers using this novel data source?
+
+[PDF of project linked here.]({{shivyucel.github.io}}/projects/static/RD_cellphone.pdf){:target="_blank"}
+
+
