--- a/projects/_posts/2023-02-27-IDM.md
+++ b/projects/_posts/2023-02-27-IDM.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Twitter Thread: Impact of Network Centrality and Income on Slowing Infection Spread after Outbreaks"
+title:  "Twitter thread: Impact of network centrality and income on slowing infection spread after outbreaks"
 #docurl: static/dashboard.html
 
 category: "projects"
