--- a/projects/_posts/2023-02-27-IDM.md
+++ b/projects/_posts/2023-02-27-IDM.md
@@ -6,7 +6,7 @@ title:  "Summary: Impact of network centrality and income on slowing infection s
 category: "projects"
 
 ---
-Summary of paper "Impact of Network Centrality and Income on Slowing Infection Spread after Outbreaks" in a Twitter thread by Chico Camargo.
+Summary of paper in a Twitter thread by Chico Camargo
 
 View the comments of the post for the full thread!
 
