--- a/projects/_posts/2023-11-08-opioid.md
+++ b/projects/_posts/2023-11-08-opioid.md
@@ -6,7 +6,7 @@ title:  "Summary: Public transport access to drug treatment before and during CO
 category: "projects"
 
 ---
-Summary of paper "Public transport access to drug treatment before and during COVID-19: Implications for the opioid epidemic" in a Twitter thread 
+Summary of paper in a Twitter thread 
 
 View the comments of the post for the full thread!
 
