--- a/projects/_posts/2021-05-01-AML.md
+++ b/projects/_posts/2021-05-01-AML.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Can machine learning be used to predict child life outcomes?"
-#docurl: static/AML.pdf
+image: "/static/projects/AML/plot.png"
 
 category: "projects"
 
