--- a/projects/_posts/2021-06-20-RD.md
+++ b/projects/_posts/2021-06-20-RD.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "A methodological critique of COVID-19 studies based on cell-phone mobility data"
-#docurl: static/RD_cellphone.pdf
+image: "/static/projects/RD/plot.png"
 category: "projects"
 
 ---
