--- a/projects/_posts/2023-02-27-IDM.md
+++ b/projects/_posts/2023-02-27-IDM.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  "Summary: Impact of network centrality and income on slowing infection spread after outbreaks"
+image: "/static/projects/IDM/plot.png"
+
 #docurl: static/dashboard.html
 
 category: "projects"
