--- a/projects/_posts/2023-11-08-opioid.md
+++ b/projects/_posts/2023-11-08-opioid.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Summary: Public transport access to drug treatment before and during COVID-19: Implications for the opioid epidemic"
-#docurl: static/dashboard.html
+image: "/static/projects/opioid/plot.png"
 
 category: "projects"
 
