--- a/projects/_posts/2024-09-20-heatwave1.md
+++ b/projects/_posts/2024-09-20-heatwave1.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  "Summary: Heatwave adaptation conditioned by everyday life"
+image: "/static/projects/heatwave1/plot.png"
+
 #docurl: static/dashboard.html
 
 category: "projects"
