--- a/projects/_posts/2021-04-20-SAN.md
+++ b/projects/_posts/2021-04-20-SAN.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Understanding São Paulo's commuting network"
-#docurl: static/SAN.pdf
+image: "/static/projects/SAN/plot.png"
 category: "projects"
 
 ---
